--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 flask==2.3.3
-pandas==2.0.3
+pandas==1.5.3
 numpy==1.24.3
 yfinance==0.2.18
+--find-links https://download.pytorch.org/whl/torch_stable.html
