--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-Flask==3.0.3
-Pillow==10.3.0
+Flask==2.3.3
 gunicorn==21.2.0
-setuptools>=70.0.0
-wheel>=0.43.0
+Werkzeug==2.3.7
+Pillow==10.0.0
+numpy==1.24.3
