--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,7 @@
-Flask==2.3.3
+flask==2.3.3
+scikit-learn==1.3.0
+pandas==2.0.3
+numpy==1.24.3
+pillow==10.0.0
+joblib==1.3.2
 gunicorn==21.2.0
-Werkzeug==2.3.7
