--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,5 @@
-flask>=2.3.0
+flask==2.3.3
 opencv-python-headless==4.8.1.78
 numpy==1.24.3
-pillow>=10.0.0
-gunicorn>=20.1.0
-setuptools>=65.5.0
+pillow==10.0.0
+gunicorn==21.2.0
