--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,4 @@
-flask==2.3.3
-opencv-python-headless==4.8.1.78
-numpy==1.24.3
-pillow==10.0.0
-gunicorn==21.2.0
+flask
+opencv-python-headless
+numpy
+gunicorn
